# pico-de-gallo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  nostd.yml  release-application.yml  release-ffi.yml  release-firmware.yml  release-hardware.yml
application/: Cargo.toml
application/src/: lib.rs  main.rs
book/src/: driver.md  getting-started.md
case/: Case.FCStd
crates/: Cargo.toml
crates/pico-de-gallo-app/: Cargo.toml  README.md
crates/pico-de-gallo-app/src/: lib.rs  main.rs
crates/pico-de-gallo-example/: Cargo.toml
crates/pico-de-gallo-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/pico-de-gallo-ffi/src/: lib.rs
crates/pico-de-gallo-firmware/: Cargo.toml  build.rs
crates/pico-de-gallo-firmware/src/: main.rs
crates/pico-de-gallo-hal/: Cargo.toml  README.md
crates/pico-de-gallo-hal/examples/: button.rs  epd2in13b.rs  gpio.rs  is31fl3743b.rs  mpu6050.rs  shtc3.rs
crates/pico-de-gallo-hal/src/: lib.rs
crates/pico-de-gallo-internal/: Cargo.toml  README.md
crates/pico-de-gallo-internal/src/: lib.rs
crates/pico-de-gallo-lib/: Cargo.toml  README.md
crates/pico-de-gallo-lib/examples/: i2c.rs  ping.rs  version.rs
crates/pico-de-gallo-lib/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
firmware/: Cargo.toml
firmware/src/: gpio.rs  i2c.rs  main.rs  spi.rs
hardware/: pico-de-gallo.kicad_pcb  pico-de-gallo.kicad_prl  pico-de-gallo.kicad_pro  pico-de-gallo.kicad_sch
internal/: Cargo.toml
internal/src/: lib.rs
