[package]
name = "gallo"
version = "0.1.0"
edition = "2024"
description = "Batch mode application to control a Pico de Gallo device"
categories = ["command-line-utilities", "development-tools", ]
keywords = ["cli", "utility", "pico-de-gallo"]
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
pico-de-gallo-lib = "0.1.0"
tabled = "0.20.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time"] }
