[package]
name = "pico-de-gallo-lib"
version = "0.2.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
embedded-hal = "1.0.0"
nusb = "0.2.0"
pico-de-gallo-internal = { path = "../pico-de-gallo-internal" }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
serde = "1.0.219"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
