[package]
name = "pico-de-gallo-lib"
version = "0.3.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
pico-de-gallo-internal = { path = "../pico-de-gallo-internal", features = ["use-std"] }
postcard-rpc = { version = "0.11", features = ["use-std", "raw-nusb"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
nusb = "0.1.9"
